<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98B8D0"
    tools:context=".presentation.multipleChoiceQuestions">

    <TextView
        android:id="@+id/answerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="343dp"
        android:layout_marginBottom="369dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/answerLabel"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionLabel" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/answerLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionMCQ" />

    <TextView
        android:id="@+id/questionMCQ"
        android:layout_width="387dp"
        android:layout_height="223dp"
        android:text="@string/question"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RevealMCQ"
        android:layout_width="127dp"
        android:layout_height="42dp"
        android:background="#4CAF50"
        android:text="@string/revealAnswer"
        android:textSize="10sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/nextMCQ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/nextMCQ"
        android:layout_width="132dp"
        android:layout_height="37dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="140dp"
        android:background="#FF5722"
        android:text="@string/next"
        android:textSize="10sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RevealMCQ" />

    <TextView
        android:id="@+id/answerLAQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="342dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="370dp"
        android:text="@string/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/answerLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/optionsMCQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="313dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="399dp"
        android:text="@string/Options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/optionLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/optionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="337dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/optionsMCQ"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>