<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98B8D0"
    tools:context=".presentation.ShortAnswerQuestions">

    <TextView
        android:id="@+id/answerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="343dp"
        android:layout_marginBottom="388dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/answerLabel"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/answerLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionSAQ" />

    <TextView
        android:id="@+id/questionSAQ"
        android:layout_width="387dp"
        android:layout_height="223dp"
        android:text="@string/question"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RevealSAQ"
        android:layout_width="132dp"
        android:layout_height="37dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="65dp"
        android:background="#4CAF50"
        android:text="@string/revealAnswer"
        android:textSize="10sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/nextSAQ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/nextSAQ"
        android:layout_width="132dp"
        android:layout_height="37dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="32dp"
        android:background="#FF5722"
        android:text="@string/next"
        android:textSize="10sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RevealSAQ" />

    <TextView
        android:id="@+id/answerSAQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="208dp"
        android:text="@string/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toEndOf="@+id/answerLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

</androidx.constraintlayout.widget.ConstraintLayout>