<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98B8D0"
    android:saveEnabled="false"
    tools:context=".presentation.NoteActivity">

    <Button
        android:id="@+id/editNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="579dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="16dp"
        android:background="#FF5722"
        android:text="Edit"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesText" />

    <Button
        android:id="@+id/nextNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="307dp"
        android:layout_marginTop="579dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FF5722"
        android:text="@string/next"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesText" />

    <TextView
        android:id="@+id/notesHeader"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="332dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/Notes"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/notesText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/notesText"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="15dp"
        android:clickable="false"
        android:enabled="true"
        android:focusable="false"
        android:selectAllOnFocus="false"
        android:text="@string/question"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesHeader" />
</androidx.constraintlayout.widget.ConstraintLayout>